--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="container">
+        <h2>Masukkan nama</h2>
+        <form action="">
+            <input type="text" name="name" id="name">
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
